Revert the change to resolve build failure