@@ -12,6 +12,7 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -74,24 +75,20 @@ public class TestUtil {
     public static final StoredDocument STORED_DOCUMENT = StoredDocument.builder().id(RANDOM_UUID)
         .documentContentVersions(
             Stream.of(DOCUMENT_CONTENT_VERSION)
-                .toList()
+                .collect(Collectors.toList())
         ).build();
 
     public static final StoredDocument DELETED_DOCUMENT = StoredDocument.builder()
         .id(RANDOM_UUID)
         .deleted(true)
-        .documentContentVersions(
-            Stream.of(DOCUMENT_CONTENT_VERSION)
-                .toList())
+        .documentContentVersions(Stream.of(DOCUMENT_CONTENT_VERSION).collect(Collectors.toList()))
         .build();
 
     public static final StoredDocument HARD_DELETED_DOCUMENT = StoredDocument.builder()
         .id(RANDOM_UUID)
         .deleted(true)
         .hardDeleted(true)
-        .documentContentVersions(
-            Stream.of(DOCUMENT_CONTENT_VERSION)
-                .toList())
+        .documentContentVersions(Stream.of(DOCUMENT_CONTENT_VERSION).collect(Collectors.toList()))
         .build();
 
     private TestUtil() {
